--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
     }
     h2 {
       color: #003366;
-      border-bottom: 2px solid #ddd;
-      padding-bottom: 0.3rem;
+      margin-top: 2rem;
     }
     details {
-      margin: 0.5rem 0;
+      margin-bottom: 0.8rem;
       border: 1px solid #ddd;
       border-radius: 6px;
       padding: 0.5rem 1rem;
@@ -43,20 +42,13 @@
       font-weight: bold;
       color: #003366;
     }
-    .steps, .faq, .study {
+    .steps {
       margin: 0.5rem 0 0.5rem 1rem;
       padding-left: 1rem;
       border-left: 3px solid #003366;
     }
     .steps li {
       margin: 0.3rem 0;
-    }
-    a {
-      color: #0066cc;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
     }
   </style>
 </head>
@@ -74,89 +66,147 @@
         const response = await fetch("epic_go_live_faq.json");
         const data = await response.json();
 
-        let modules = Array.isArray(data) ? data : data.modules;
-
-        // Pull Go-Live Prep out and append to end
-        const goLive = modules.filter(m => m.module.includes("Go-Live Preparation"));
-        modules = modules.filter(m => !m.module.includes("Go-Live Preparation"));
-        if (goLive.length > 0) modules.push(...goLive);
-
         const container = document.getElementById("content");
         container.innerHTML = "";
 
-        modules.forEach(module => {
-          const moduleDiv = document.createElement("div");
-          moduleDiv.innerHTML = `<h2>${module.module}</h2>`;
+        // All modules except Go-Live Preparation
+        data
+          .filter(m => m.module !== "Go-Live Preparation")
+          .forEach(module => {
+            const moduleDiv = document.createElement("div");
+            moduleDiv.innerHTML = `<h2>${module.module}</h2>`;
 
-          // Special handling for Go-Live Preparation
-          if (module.module.includes("Go-Live Preparation")) {
+            // Steps as collapsible How To
             if (module.steps && module.steps.length > 0) {
-              module.steps.forEach(step => {
-                const stepDetails = document.createElement("details");
-                stepDetails.innerHTML = `<summary>${step.title}</summary>`;
+              module.steps.forEach(stepBlock => {
+                const details = document.createElement("details");
+                details.innerHTML = `<summary>📘 How to: ${stepBlock.title}</summary>`;
+                if (stepBlock.items) {
+                  const ul = document.createElement("ul");
+                  ul.className = "steps";
+                  stepBlock.items.forEach(item => {
+                    const li = document.createElement("li");
+                    li.textContent = item;
+                    ul.appendChild(li);
+                  });
+                  details.appendChild(ul);
+                }
+                moduleDiv.appendChild(details);
+              });
+            }
+
+            // FAQs
+            if (module.qa && module.qa.length > 0) {
+              module.qa.forEach(item => {
+                const qaDetails = document.createElement("details");
+                qaDetails.innerHTML = `<summary>❓ ${item.q}</summary><p>${item.a}</p>`;
+                moduleDiv.appendChild(qaDetails);
+              });
+            }
+
+            container.appendChild(moduleDiv);
+          });
+
+        // Nursing Tip Sheets section
+        const nursingDiv = document.createElement("div");
+        nursingDiv.innerHTML = `<h2>Nursing Tip Sheets</h2>`;
+        const nursingSheets = [
+          "Epic Essentials",
+          "IP Charges Tip Sheet - Copy",
+          "Inpatient Nurse - Orders",
+          "Inpatient Nurse - Review the Chart",
+          "Inpatient Nurse - Transfer",
+          "Inpatient Nurse - Vitals and Assessments",
+          "Inpatient Nurse - Work List",
+          "Isolation Order BPA",
+          "Iv infusion workflow",
+          "LVN RN Cosign Notes - Tip Sheet",
+          "MAR Administration - Tip Sheet",
+          "MAR Skin Sub - Tip Sheet",
+          "MAR Skin Sub - SCPA Wound",
+          "MRI Screening Form - Tip Sheet",
+          "Marking a deceased patient bed for cleaning",
+          "Med Admin CR",
+          "MyChart Signup TipSheet",
+          "Note Type tip sheet",
+          "Nurse Assessment",
+          "Nurse Quick Start Guide (Full-Page)",
+          "OnBase new tip sheet",
+          "Organ Donor - Tip Sheet",
+          "PPD Tip Sheet_2018",
+          "PT Movement to Psych",
+          "PTA Med Review Tipsheet - Prime",
+          "Patient Movement Discharge to SNF",
+          "Patient Movement Inpatient to Psych",
+          "Patient Movement Using Discharge Readmit Navigator",
+          "Preassign Nurses",
+          "Preferred Pharmacy",
+          "Psychotropic Medication E-consent",
+          "RN - Resulting a POCT",
+          "Record of Death tip sheet",
+          "Reprint label tip sheet",
+          "Restraint Work List tip sheet",
+          "Review PTA Meds Tip Sheet",
+          "Reviewing Charges - Tip Sheet",
+          "Scanning specimen tip sheet",
+          "Sepsis tip sheet",
+          "TB Test Documentation",
+          "The Work List",
+          "Tip Sheet Manual Chart Correction Flowsheets",
+          "Tip Sheet Manual Chart Correction Notes",
+          "Undo Discharge tip sheet",
+          "Unit Clerk - Admitting & Discharging & Transferring",
+          "Unreadable barcode tip sheet",
+          "Update Accommodation Code",
+          "Using Transport Clinical Staff",
+          "Wound RN Charging",
+          "ordering blood",
+          "psychotropic med tip sheet"
+        ];
+        nursingSheets.forEach(title => {
+          const details = document.createElement("details");
+          details.innerHTML = `<summary>${title}</summary><p>[Placeholder – Tip Sheet coming soon]</p>`;
+          nursingDiv.appendChild(details);
+        });
+        container.appendChild(nursingDiv);
+
+        // Go-Live Preparation always last
+        const goLive = data.find(m => m.module === "Go-Live Preparation");
+        if (goLive) {
+          const goDiv = document.createElement("div");
+          goDiv.innerHTML = `<h2>${goLive.module}</h2>`;
+
+          if (goLive.steps && goLive.steps.length > 0) {
+            goLive.steps.forEach(stepBlock => {
+              const details = document.createElement("details");
+              details.innerHTML = `<summary>${stepBlock.title}</summary>`;
+              if (stepBlock.items) {
                 const ul = document.createElement("ul");
                 ul.className = "steps";
-                step.items.forEach(item => {
+                stepBlock.items.forEach(item => {
                   const li = document.createElement("li");
                   li.textContent = item;
                   ul.appendChild(li);
                 });
-                stepDetails.appendChild(ul);
-                moduleDiv.appendChild(stepDetails);
-              });
-            }
-
-            if (module.qa && module.qa.length > 0) {
-              module.qa.forEach(item => {
-                const qDetails = document.createElement("details");
-                qDetails.innerHTML = `<summary>${item.q}</summary><p>${item.a}</p>`;
-                moduleDiv.appendChild(qDetails);
-              });
-            }
-          } else {
-            // Normal modules → How To / FAQs / Study Materials
-            if (module.steps && module.steps.length > 0) {
-              const howToDetails = document.createElement("details");
-              howToDetails.innerHTML = `<summary>📘 How To</summary>`;
-
-              module.steps.forEach(step => {
-                const stepDetails = document.createElement("details");
-                stepDetails.innerHTML = `<summary>${step.title}</summary>`;
-                const ul = document.createElement("ul");
-                ul.className = "steps";
-                step.items.forEach(item => {
-                  const li = document.createElement("li");
-                  li.textContent = item;
-                  ul.appendChild(li);
-                });
-                stepDetails.appendChild(ul);
-                howToDetails.appendChild(stepDetails);
-              });
-
-              moduleDiv.appendChild(howToDetails);
-            }
-
-            if (module.qa && module.qa.length > 0) {
-              const faqDetails = document.createElement("details");
-              faqDetails.innerHTML = `<summary>❓ FAQs</summary>`;
-              module.qa.forEach(item => {
-                const qDetails = document.createElement("details");
-                qDetails.innerHTML = `<summary>${item.q}</summary><p>${item.a}</p>`;
-                faqDetails.appendChild(qDetails);
-              });
-              moduleDiv.appendChild(faqDetails);
-            }
-
-            const studyDetails = document.createElement("details");
-            studyDetails.innerHTML = `<summary>📂 Study Materials</summary>
-              <div class="study"><p><a href="#">(Placeholder link to study materials)</a></p></div>`;
-            moduleDiv.appendChild(studyDetails);
+                details.appendChild(ul);
+              }
+              goDiv.appendChild(details);
+            });
           }
 
-          container.appendChild(moduleDiv);
-        });
+          if (goLive.qa && goLive.qa.length > 0) {
+            goLive.qa.forEach(item => {
+              const qaDetails = document.createElement("details");
+              qaDetails.innerHTML = `<summary>❓ ${item.q}</summary><p>${item.a}</p>`;
+              goDiv.appendChild(qaDetails);
+            });
+          }
+
+          container.appendChild(goDiv);
+        }
+
       } catch (error) {
-        document.getElementById("content").innerHTML = 
+        document.getElementById("content").innerHTML =
           `<p style="color:red;">⚠️ Error loading FAQs: ${error.message}</p>`;
       }
     }
